--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,43 +1,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+  
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --main: #88aaee;
+  --overlay: rgba(0, 0, 0, 0.8); /* background color overlay for alert dialogs, modals, etc. */
+
+  --bg: #dfe5f2;
+  --bw: #fff; /* white and secondary black e.g. utility class variant would be: bg-[#fff] dark:bg-[#212121] */
+  --blank: #000; /* blank black and white */
+  --border: #000;
+  --text: #000;
+  --mtext: #000; /* text that is placed on background with main color e.g. text color of default button */
+  --ring: #000;
+  --ring-offset: #fff;
+
+  --border-radius: 5px;
+  --box-shadow-x: 4px;
+  --box-shadow-y: 4px;
+  --reverse-box-shadow-x: -4px;
+  --reverse-box-shadow-y: -4px;
+  --base-font-weight: 500;
+  --heading-font-weight: 700;
+
+  --shadow: var(--box-shadow-x) var(--box-shadow-y) 0px 0px var(--border);
 }
 
 .dark {
-  --background: #0a0a0a;
-  --foreground: #ededed;
-}
+  --bg: #272933;
+  --bw: #212121;
+  --blank: #fff;
+  --border: #000;
+  --text: #e6e6e6;
+  --mtext: #000;
+  --ring: #fff;
+  --ring-offset: #000;
 
-.light {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Sorting Feature Styles */
-.sort-button {
-  padding: 0.5rem 1rem;
-  border-radius: 0.375rem; /* Rounded corners */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Shadow */
-  background-color: #f97316; /* Orange background */
-  color: white;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.sort-button:hover {
-  background-color: #ea580c; /* Darker orange on hover */
-}
-
-.sort-button.active {
-  background-color: #dc2626; /* Red for active state */
+  --shadow: var(--box-shadow-x) var(--box-shadow-y) 0px 0px var(--border);
 }
